# SocketRPI

./: CMakeLists.txt  README.md  test.c  ud_ucase.h  ud_ucase_cl.c  ud_ucase_sv.c
Deel2/: CMakeLists.txt  index.html  main.c
